@@ -825,94 +825,6 @@ static AL_rctree *quote_prim(UNUSED(AL_rctree *env), AL_rctree *args) {
 }
 
 /*
- * _alGetGlobalVector( const char *str, ALRcEnum type, ALuint num, ALvoid *retref )
- *
- * If str names an existing alrc symbol, type matches the type of that symbol,
- * and num corresponds with the length of the value of that symbol,
- * retref[0 .. num-1] is populated with the value of that symbol and this call
- * returns AL_TRUE.  Otherwise, AL_FALSE is returned.
- *
- * NOTE: future revisions should replace this with a call to rc_lookup.
- *
- * FIXME: fill out literal support
- */
-ALboolean _alGetGlobalVector( const char *str,
-			      ALRcEnum type,
-			      ALuint num,
-			      ALvoid *retref ) {
-	AL_rctree *sym;
-	ALfloat *fvp;
-	ALint *ivp; /* integer interator */
-	ALuint i;
-
-	if(retref == NULL) {
-		return AL_FALSE;
-	}
-
-	sym = _alGlobalBinding( str );
-	if( sym == NULL ) {
-		return AL_FALSE;
-	}
-
-	switch(type) {
-		case ALRC_INTEGER:
-		  ivp = retref;
-
-		  for(i = 0; i < num; i++) {
-			  if(sym == NULL) {
-				  return AL_FALSE;
-			  }
-			  switch( sym->type ) {
-				  case ALRC_INTEGER:
-				    ivp[i] = alrc_car(sym)->data.i;
-				    break;
-				  case ALRC_FLOAT:
-				    ivp[i] = alrc_car(sym)->data.f;
-				    break;
-				  default:
-				    _alDebug(ALD_CONFIG,
-					__FILE__, __LINE__,
-					"list->type = 0x%x", sym->type);
-				    return AL_FALSE;
-			  }
-
-			  sym = alrc_cdr( sym );
-		  }
-		  return AL_TRUE;
-		  break;
-		case ALRC_FLOAT:
-		  fvp = retref;
-
-		  for(i = 0; i < num; i++) {
-			  if(sym == NULL) {
-				  return AL_FALSE;
-			  }
-			  switch(sym->type) {
-				  case ALRC_INTEGER:
-				    fvp[i] = alrc_car(sym)->data.i;
-				    break;
-				  case ALRC_FLOAT:
-				    fvp[i] = alrc_car(sym)->data.f;
-				    break;
-				  default:
-				    _alDebug(ALD_CONFIG,
-					__FILE__, __LINE__,
-					"list->type = 0x%x", sym->type);
-				    return AL_FALSE;
-			  }
-
-			  sym = alrc_cdr( sym );
-		  }
-		  return AL_TRUE;
-		  break;
-		default:
-		  break;
-	}
-
-	return AL_FALSE;
-}
-
-/*
  * _alGetGlobalScalar( const char *str, ALRcEnum type, ALvoid *retref )
  *
  * If str names an existing alrc symbol, and type matches the type of that
